# Stackduck

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
migrations/: 20250723223839_create_jobs_table.sql  20250803185302_add_error_message_column.sql
proto/: jobqueue.proto  stackduck.proto  stackduckproto.proto
src/: error.rs  grpc.rs  job.rs  lib.rs  main.rs  queue.rs  schema.sql  stackduck.rs  types.rs
src/db/: postgres.rs  redis.rs
tests/: consume_job_tests.rs
