[package]
name = "stackduck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
deadpool-redis = "0.22.0"
strum = "0.25"
strum_macros = "0.25"
tonic = "0.13.1"
tokio-stream = { version = "0.1.17", features = ["sync"] } 
prost = "0.14.1"
async-stream = "0.3.6"
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.13.1"

[features]
default = []
